// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package chrome.fleet.labservice;

option go_package = "infra/cros/cmd/labservice/api";

// LabSerivce provides any functionality/info to be expose for the Fleet managed
// lab environment.
service LabService {
  rpc GetTkoAddress(GetTkoAddressRequest) returns (GetTkoAddressResponse);
}

message GetTkoAddressRequest {}
message GetTkoAddressResponse {
  // socket_path is the absolute filesystem path to a MySQL socket to the TKO
  // database.
  string socket_path = 1;
}
